<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/card_name"
            android:id="@+id/textView"
            android:layout_gravity="left|center_vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/u_spinner"
                android:layout_weight="3"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/u_delete"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/card_number"
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/u_card_number"
            android:layout_gravity="left|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/card_ccv"
            android:id="@+id/textView3"
            android:layout_gravity="left|center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/u_card_ccv"
            android:layout_gravity="left|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/card_type"
            android:id="@+id/textView4"
            android:layout_gravity="left|center_vertical" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/u_card_type_spinner"
            android:layout_gravity="left|center_vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/card_intl"
                android:id="@+id/textView5"
                android:layout_gravity="left|center_vertical" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/u_tgl_intl"
                android:textOff="@string/toggle_off"
                android:textOn="@string/toogle_on" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/card_debit"
                android:id="@+id/textView6" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/u_tgl_debit"
                android:textOff="@string/toggle_off"
                android:textOn="@string/toogle_on" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/card_bank"
            android:id="@+id/textView7" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/u_card_bank_spinner"
            android:layout_gravity="left|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/card_valid_thru"
            android:id="@+id/textView8"
            android:layout_gravity="left|center_vertical" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/u_datePicker"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/photo_preview"
            android:id="@+id/textView9" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/u_imageView"
            android:contentDescription="@string/contentDescription"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_gallery"
            android:adjustViewBounds="true"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_update" />

    </LinearLayout>
</ScrollView>